Fixed navigation bar overlapping content

--- a/app/assets/stylesheets/_vars.scss
+++ b/app/assets/stylesheets/_vars.scss
@@ -1,3 +1,6 @@
 $back-colour: #151515;
+$back-hover-colour: #252525;
 $text-subtle-colour: #99a1a7;
 $text-colour: #FFFFFF;
+
+$header-size: 100px;
